--- a/Home_Page/Index.html
+++ b/Home_Page/Index.html
@@ -69,10 +69,15 @@
 </head> 
 <body >
 <div id="rflheader" class="flex-container">
-<div  id="sidenav" class="sidenav" >
-<div class="container"> <div id="closenav" class="top-right"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg></div> </span> <div class="top-left"><span style="font-size: 18px; font-weight:600;background-color: transparent">Welcome To RaffleBucks!</span></div> <div class="bottom-left"><a  id="butlog" type="button" href="#" >Login/Register</a></div>  </div>
-<div style=" background-image: linear-gradient(to right,#667eea,#764ba2);;padding-bottom:5px">
- <h3 style="margin-top:0px;position:relative;top:10px;left:14px;border-bottom:2px solid black">Shop By Category</h3>
+
+<div  id="sidenav" class="sidenav">
+<div class="container" >
+  <img src="Images/Rfllogo.png" alt="RaffleBucks Logo" id="sidenavlogo">
+  <div id="closenav" class="top-right"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg></div> </span> <div class="top-left"><span style="font-size: 18px; font-weight:600;background-color: transparent"></span></div> <div class="bottom-left"><a  id="butlog" type="button" href="#" >Login</a></div> 
+  <div id="regbut"><a id="butlog" type="button" href="#" >Register</a></div>
+</div>
+<div style="background-color: white;padding-bottom:5px">
+ <h3 style="margin-top:0px;position:relative;top:10px;left:14px;border-bottom:2px solid black;background-color:white;">Shop By Category</h3>
  <!-- <a href="#"> <svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-list"><line x1="8" y1="6" x2="21" y2="6"></line><line x1="8" y1="12" x2="21" y2="12"></line><line x1="8" y1="18" x2="21" y2="18"></line><line x1="3" y1="6" x2="3.01" y2="6"></line><line x1="3" y1="12" x2="3.01" y2="12"></line><line x1="3" y1="18" x2="3.01" y2="18"></line></svg>&nbsp; All Categories</a> -->
   <a href="#"><i class="fas fa-tshirt" style="margin-bottom: 1px;font-size:14px"  ></i>&nbsp;  Fashion</a>
   <a href="#"><i class="fas fa-mobile" style="margin-left:4px;margin-bottom: 1px;font-size:14px"></i>&nbsp; &nbsp;Mobiles & Accessories</a>
@@ -80,7 +85,7 @@
   <a href="#"><i class="fas fa-couch" style="margin-bottom: 1px;font-size:14px"></i>&nbsp; Home & Furniture</a>
   <a href="#"><i class="fas fa-biking" style="margin-bottom: 1px;font-size:14px"></i>&nbsp; Sports,Fitness & More..</a> 
 </div>
-<div style=" background-image: linear-gradient(to right,#667eea,#764ba2);padding-top:0px;padding-bottom:5px; margin-top: 0px"> 
+<div style=" background-color: white;padding-top:0px;padding-bottom:5px; margin-top: 0px"> 
   <h3 style="margin-top:0px;position:relative;top:10px;left:14px;border-bottom:2px solid black">Contests & Quizzes</h3>
   <a href="#"><i class="fas fa-gamepad" style="margin-bottom: 1px;font-size:14px"></i>&nbsp; RB GAME ZONE</a>
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-help-circle"><circle cx="12" cy="12" r="10"></circle><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"></path><line x1="12" y1="17" x2="12.01" y2="17"></line></svg>&nbsp;  RB QUIZ ZONE</a>
@@ -88,7 +93,7 @@
     
 
 
-<div style=" background-image: linear-gradient(to right,#667eea,#764ba2);padding-top:0px;padding-bottom:5px; margin-top: 0px"> 
+<div style="background-color: white;padding-top:0px;padding-bottom:5px; margin-top: 0px"> 
  <h3 style="margin-top:0px;position:relative;top:10px;left:14px;border-bottom:2px solid black">Profile</h3>
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg><span>&nbsp; My Account</span></a>
   <a href="#"><i class="fas fa-wallet"></i><span>&nbsp; My Bucks</span></a>
@@ -100,13 +105,14 @@
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-gift"><polyline points="20 12 20 22 4 22 4 12"></polyline><rect x="2" y="7" width="20" height="5"></rect><line x1="12" y1="22" x2="12" y2="7"></line><path d="M12 7H7.5a2.5 2.5 0 0 1 0-5C11 2 12 7 12 7z"></path><path d="M12 7h4.5a2.5 2.5 0 0 0 0-5C13 2 12 7 12 7z"></path></svg><span>&nbsp; My Prizes</span></a>
   <a href="#"><svg style="margin-bottom: -3px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg><span>&nbsp; My Alerts</span></a>
 </div>
-<div style=" background-image: linear-gradient(to right,#667eea,#764ba2);padding-top:0px;padding-bottom:50px; margin-top: 0px">
+<div style=" background-color: white;padding-top:0px;padding-bottom:50px; margin-top: 0px">
   <h3 style="margin-top:0px;position:relative;top:10px;left:14px;border-bottom:2px solid black">More Options</h3>
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-help-circle"><circle cx="12" cy="12" r="10"></circle><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"></path><line x1="12" y1="17" x2="12.01" y2="17"></line></svg><span>&nbsp; Help & Support</span></a>
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-briefcase"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path></svg><span>&nbsp; Sell On RaffleBucks</span></a>
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-download"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg><span>&nbsp; Download App</span></a>
 </div>
 </div>
+<div id="backover"></div>
 <span  id="opensidenav"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg></span>
 
    <img src="Images/Rfllogo.png" alt="Raffle Bucks Logo" id="rfllogo">
@@ -125,11 +131,12 @@
 <!--OPTIONS : USER,CART,ALERTS AND MORE OPTIONS-->
 <div id="headopt">
 <div class="tooltip" id="pos">
- <div class="header" id="usersvg"><a title="User Options" href="#">
+ <div class="header" id="usersvg"><a title="User Options" href="/Pages with Home page/Login Page/Login.html ">
     <svg id="usercolor" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
  </a></div>
- <div class="tooltipopt">
-    <div class="verticalmenu" id="vtw">
+  <div class="overlay1">
+    <div class="verticalmenu">
+     
    <a href="/Raffle_Bucks/Pages with Home page/Login Page/Login.html"><svg  style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-in"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"></path><polyline points="10 17 15 12 10 7"></polyline><line x1="15" y1="12" x2="3" y2="12"></line></svg><span>&nbsp; Login</span></a>
   <a href="/Raffle_Bucks/Pages with Home page/Sign Up Page/Signup.html"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user-plus"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><line x1="20" y1="8" x2="20" y2="14"></line><line x1="23" y1="11" x2="17" y2="11"></line></svg><span>&nbsp; Create Account</span></a>
   <a href="#"><i class="fas fa-wallet"></i><span>&nbsp; My Bucks</span></a>
@@ -137,21 +144,31 @@
   <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-truck"><rect x="1" y="3" width="15" height="13"></rect><polygon points="16 8 20 8 23 11 23 16 16 16 16 8"></polygon><circle cx="5.5" cy="18.5" r="2.5"></circle><circle cx="18.5" cy="18.5" r="2.5"></circle></svg><span>&nbsp; My Orders</span></a>
   <a href="#"><svg  style="margin-bottom: -2px;"  xmlns="http://www.w3.org/2000/svg"width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-percent"><line x1="19" y1="5" x2="5" y2="19"></line><circle cx="6.5" cy="6.5" r="2.5"></circle><circle cx="17.5" cy="17.5" r="2.5"></circle></svg><span>&nbsp; My Coupons</span></a>
   <a href="#"><i class="fas fa-ticket-alt"></i><span>&nbsp; My Tickets</span></a>
-  <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-gift"><polyline points="20 12 20 22 4 22 4 12"></polyline><rect x="2" y="7" width="20" height="5"></rect><line x1="12" y1="22" x2="12" y2="7"></line><path d="M12 7H7.5a2.5 2.5 0 0 1 0-5C11 2 12 7 12 7z"></path><path d="M12 7h4.5a2.5 2.5 0 0 0 0-5C13 2 12 7 12 7z"></path></svg><span>&nbsp; My Prizes</span></a>
+  <a href="#"><svg style="margin-bottom:-2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-gift"><polyline points="20 12 20 22 4 22 4 12"></polyline><rect x="2" y="7" width="20" height="5"></rect><line x1="12" y1="22" x2="12" y2="7"></line><path d="M12 7H7.5a2.5 2.5 0 0 1 0-5C11 2 12 7 12 7z"></path><path d="M12 7h4.5a2.5 2.5 0 0 0 0-5C13 2 12 7 12 7z"></path></svg><span>&nbsp; My Prizes</span></a>
 </div>
-  </div>
 </div>
+</div>
+
 <!--CART -->
 
 <div class="header" id="pos1"><a href="#" title="Products In Your Cart"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg></a></div>
 <!--SPACE FOR NOTIFICATIONS TOOLTIP-->
 
-<div class="header" id="pos2"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg></a></div>
+<div class="tooltip" id="pos2">
+  <div class="header" id="usernoti">
+  <svg id="notisvg" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg></div>
+<div class="overlay">
+<div class="tooltipopt2">
 
+<div id="headnoti"><h3 style="border-bottom:2px solid black;">NOTIFICATIONS</h3></div>
+
+</div>
+</div>
+</div>
 <!--MORE OPTIONS -->
 <div class="tooltip1" id="pos3">
 <div class="header" id="morebtn"><a href="#"><svg id="morecolor" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical"><circle cx="12" cy="12" r="1"></circle><circle cx="12" cy="5" r="1"></circle><circle cx="12" cy="19" r="1"></circle></svg></a></div>
-<div class="tooltipopt1">
+<div class="overlay2">
   <div class="verticalmenu" id="vtw">
     <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-help-circle"><circle cx="12" cy="12" r="10"></circle><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"></path><line x1="12" y1="17" x2="12.01" y2="17"></line></svg><span>&nbsp; Help & Support</span></a>
     <a href="#"><svg style="margin-bottom: -2px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-briefcase"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path></svg><span>&nbsp; Sell On RaffleBucks</span></a>
@@ -637,7 +654,7 @@
           </div>
           <div class="banner"><a href="#"><img src="images/FASHION/JACK&.png"></a></div>
        <footer>
-         <div id="feature-heading"><h1 style="border-bottom: 2px solid black;">OUR PROMISES TO YOU</h1></div>
+         <div id="feature-heading"><h1 style="border-bottom: 2px solid black;">WE PROMISE</h1></div>
          <div id="feature-container">
            <div class="feabox">
              <div><svg xmlns="http://www.w3.org/2000/svg" width="84" height="84" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-truck"><rect x="1" y="3" width="15" height="13"></rect><polygon points="16 8 20 8 23 11 23 16 16 16 16 8"></polygon><circle cx="5.5" cy="18.5" r="2.5"></circle><circle cx="18.5" cy="18.5" r="2.5"></circle></svg></div>
